--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 .DS_Store
 **/scratch
+**/.ipynb_checkpoints
+
+**/not_used
+
+**/great_lakes
 **/grid_WGS84_ES
 **/ribbons_WGS84_ES
+**/grid_WGS84_ES
+**/lake_michigan
 **/rivers
 **/states
+
 **/output_3D
-**/.ipynb_checkpoints
+**/river_inputs
 phosphorus_avg_MJJA.nc
 ptr_tave.0000315360.data.nc
 ptr_tave.0000473040.data.nc
